# wg

./: .gitguardian.yml  .gitignore  AGENTS.md  BUG_REPORT_CYCLE_NOT_FIRING.md  CLAUDE.md  COMPARATIVE_PROMPT_ANALYSIS.md  CRON_INTEGRATION_COMPLETE.md  CRON_INTEGRATION_SUMMARY.md  Cargo.toml  DEBUG_LOGGING_IMPLEMENTATION.md  DESIGN-coordinator-lifecycle.md  DESIGN-journal-based-coordinator-self-compaction.md  DESIGN-user-message-feed.md  FINAL_TRIAGE_REPORT.md  Makefile  PROMPT_ASSEMBLY_ANALYSIS.md  PROMPT_CONSTRUCTION_ANALYSIS.md  README.md  TRIAGE_SYNTHESIS.md  WG_EXECUTOR_MODEL_MISMATCH_INTEGRATION.md  WG_EXECUTOR_MODEL_MISMATCH_PR_CI.md  WG_EXECUTOR_MODEL_MISMATCH_QUALITY.md  WG_EXECUTOR_MODEL_MISMATCH_TRIAGE.md  accidental-cycle-analysis.md  action-plan-2026-04-14.md  agency_boot_feedback.md  agent_spawning_trace_analysis.md  audit-fix-auto-task-edges-report.md  audit-unified-report.md  bug-evolve-run-bypasses-codex-route.md  bug-wg-html-box-drawing-glyph-alignment.md  context.md  coordinator-lifecycle-audit.md  cron_triggers_design.md  design-after-dependency-enforcement.md  design-claim-lifecycle.md  dist-workspace.toml  env.frontier.sh  env.sh  executor-integration-design.md  (+28 more)
docs/: ADR-actor-vs-agent-identity.md  AGENCY.md  (+91 more)
terminal-bench/: BLOG.md  DESIGN-condition-a-isolation.md  DESIGN-hard-benchmarks.md  DESIGN-native-wg-integration.md  DESIGN-tb-federation.md  LOCAL-MODEL-SETUP.md  README.md  RESEARCH-FANOUT-GUIDANCE.md  RESEARCH-local-models-for-tb.md  RESEARCH-smoke-scope-criteria.md  TB-CONDITION-G-FANOUT-ANALYSIS.md  TB-TASK-SET-AUDIT.md  collect_nemotron_g_results.py  heartbeat.sh  nemotron-3-super-condition-g-config.json  nex-eval-qwen3-coder-30b-condition-a-config.json  pyproject.toml  reproduce.sh  run_condition_a.py  run_full_a_prime_vs_f.py  run_hard_benchmarks.py  run_pilot_a_prime.py  run_pilot_a_vs_g_haiku.py  run_pilot_condition_f.py  run_pilot_f_5x1.py  run_pilot_f_89.py  run_pilot_free_smoke.py  run_pilot_qwen3_local_10.py  run_pilot_qwen3_local_10_g.py  run_qwen3_hard_20_a.py  run_qwen3_hard_20_g.py  run_retest_comparison.py  run_scale_experiment.py  tb-harness.sh  tb_trial_runner.py  test_verify_gate_smoke.py  trial-config-condition-f.json  trial-config-full-a-prime-vs-f.json  trial-config-full-sweep-01.json  trial-config-pilot-a-89.json  (+2 more)
terminal-bench/analysis/: agency-pipeline-gap.md  agent-behavior-research.md  condition-d-design.md  condition-e-design.md  condition-f-final-design.md  condition-f-memory-injection.md  condition-f-results.md  conditions-and-f-design.md  cross-condition-synthesis.md  decomposition-investigation.md  early-behavior-findings.md  executor-improvements-integration.md  flip-model-investigation.md  pilot-comparison.md  tb2-runtime-compliance-audit.md  tool-parity-report.md  wg-availability-investigation.md
terminal-bench/docs/: HOWTO-submit-to-leaderboard.md  RUNBOOK.md  audit-adapter-harbor-integration.md  audit-minimax-model-confirmation.md  audit-ulivo-g-state.md  condition-c-design.md  design-graceful-completion.md  design-tb-heartbeat-orchestration.md  experiment-handoff.md  experiment-progress-report.md  inventory.md  pilot-a89-vs-f89-report.md  pilot-results-synthesis.md  remote-setup.md  research-agent-web-prompting.md  research-condition-g-status.md  research-coordinator-heartbeat.md  research-harbor-ag-conditions.md  research-howto-submission-review.md  research-remote-host-vs-batched.md  research-tb-agent-turn-budget.md  research-tb-harness-wiring.md  research-tb-timeout-scoring.md  research-wg-in-harbor.md  scale-experiment-design.md  smoke-test-g-harness-findings.md  spec-native-executor-harbor.md  surveillance-audit.md
terminal-bench/leaderboard-submission/: README.md
terminal-bench/leaderboard-submission/workgraph-condition-a__minimax-m2.7/: metadata.yaml
terminal-bench/leaderboard-submission/workgraph-condition-b__minimax-m2.7/: metadata.yaml
terminal-bench/leaderboard-submission/workgraph-condition-c__minimax-m2.7/: metadata.yaml
terminal-bench/results/: aprime-vs-f-m27-synthesis.md  pilot-comparison.md  pilot-condition-f.md
terminal-bench/results/calibration-a-001/: metadata.json  result.json
terminal-bench/results/calibration-b-001/: metadata.json  result.json
terminal-bench/results/calibration-qwen-a-001/: metadata.json  result.json
terminal-bench/results/calibration-qwen-b-001/: metadata.json  result.json
terminal-bench/results/full-a-prime-vs-f/: full-benchmark-a-prime-vs-f.md  summary.json
terminal-bench/results/full-condition-b/: audit-condition-b-wg-usage.md
terminal-bench/results/pilot-a-89/: summary.json
terminal-bench/results/pilot-a-prime/: check-progress.sh  run.sh  summary.json
terminal-bench/results/pilot-a-vs-g-haiku/: comparison-report.md  summary.json
terminal-bench/results/pilot-condition-a-prime-native/: pilot-condition-a-prime.md  summary.json
terminal-bench/results/pilot-f-89/: failure-analysis.md
terminal-bench/results/qwen3-hard-20-a/: RESULTS.md
terminal-bench/results/rerun-condition-b/: check-progress.sh  run.sh  summary.md
terminal-bench/results/smoke-no-surv/: comparison.md  condF-algorithm-r0.json  condF-build-cython-ext-r0.json  condF-debugging-r0.json  condF-file-ops-r0.json  config.json  manifest.json  summary.json
terminal-bench/submissions/condition-a/: metadata.yaml
terminal-bench/submissions/condition-f/: metadata.yaml
terminal-bench/tb-evaluations/: .gitignore
terminal-bench/tb-results/: comparison-data.json  comparison-report.md
terminal-bench/tb-results/retest-g-original/: summary.json
terminal-bench/tb-results/retest-g-smart/: summary.json
terminal-bench/tests/: test_adapter.py  test_smoke_trials.py  test_tb_logging.py
terminal-bench/trials/: evolution-impact.md  evolution-run-01-log.md  executor-h2h-plan.md  executor-h2h-results.md  executor-synthesis.md  manifest-full-sweep-01.json  manifest-pilot-01.json  manifest-rerun-01.json  tb-results-full-sweep-01.json  tb-results-rerun-01.json  tb-results-smoke-pilot.json
terminal-bench/wg/: AUDIT-adapter-bypass-points.md  adapter.py  daemon_cleanup.py  tb_logging.py
(+1402 files in other folders)
