[package]
name = "workgraph"
version = "0.1.0"
edition = "2024"
description = "A lightweight wg coordination graph for humans and AI agents"
license = "MIT"
repository = "https://github.com/graphwork/wg"
homepage = "https://github.com/graphwork/wg"

[[bin]]
name = "wg"
path = "src/main.rs"

# Project-wide lint policy. Applies to lib, bin, and integration tests (so the
# crate-local `#![allow(...)]` blocks in lib.rs / main.rs don't have to be
# duplicated into every tests/*.rs).
#
# Most of these were added when CI's toolchain (`dtolnay/rust-toolchain@stable`)
# rolled from 1.93 to 1.95 and a fresh batch of lints fired against existing
# code. Where the lint is style-preference rather than a correctness issue, we
# allow crate-wide rather than churn every site. Genuinely incorrect code
# (overly_complex_bool_expr) is left at its default `deny` and fixed instead.
[lints.rust]
dead_code = "allow"
unused_assignments = "allow"

[lints.clippy]
# Carried over from the lib.rs/main.rs blocks (1.93-era lint additions).
while_let_loop = "allow"
manual_div_ceil = "allow"
manual_checked_ops = "allow"
useless_conversion = "allow"
unnecessary_sort_by = "allow"
collapsible_match = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
# Added for 1.95.
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
empty_line_after_doc_comments = "allow"
field_reassign_with_default = "allow"
too_many_arguments = "allow"
if_same_then_else = "allow"
large_enum_variant = "allow"
enum_variant_names = "allow"
type_complexity = "allow"
# More 1.95-era style preferences (high-volume noise; not correctness issues).
needless_borrows_for_generic_args = "allow"
vec_init_then_push = "allow"
useless_format = "allow"
useless_vec = "allow"
clone_on_copy = "allow"
nonminimal_bool = "allow"
iter_cloned_collect = "allow"
manual_range_contains = "allow"
manual_str_repeat = "allow"
manual_repeat_n = "allow"
cloned_ref_to_slice_refs = "allow"
let_unit_value = "allow"
needless_return = "allow"
assertions_on_constants = "allow"
absurd_extreme_comparisons = "allow"
module_inception = "allow"
items_after_test_module = "allow"
unnecessary_filter_map = "allow"
unnecessary_get_then_check = "allow"

[features]
default = ["matrix-lite"]
matrix = ["dep:matrix-sdk"]
matrix-lite = ["dep:urlencoding"]
telegram = ["dep:teloxide"]
email = ["dep:lettre"]
slack = []
llm-tests = []  # gates tests that call Claude CLI
test-support = []  # exposes test helpers for cross-crate use

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
petgraph = "0.6"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
rustyline = "14"
ratatui = "0.30"
crossterm = "0.29"
ascii-dag = "0.8"
zstd = "0.13"
dialoguer = "0.11"
walkdir = "2"
ansi-to-tui = "8"
strip-ansi-escapes = "0.2"
fuzzy-matcher = "0.3"
tui-tree-widget = "0.24"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
# syntect-tui 3.0.6 is pinned to ratatui 0.29 and isn't yet updated
# for ratatui 0.30. We inline the (small) Style/Span conversion in
# `src/tui/syntect_convert.rs` to avoid being stuck on the older
# ratatui until upstream catches up.
regex = "1"
async-trait = "0.1"
html-escape = "0.2"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "rustls-tls"], default-features = false }
glob = "0.3"
unicode-width = "0.2"
edtui = "0.11"
csv = "1.3"
cron = "0.12"
log = "0.4"
env_logger = "0.11"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
# Upstream yanked every rquest release on crates.io after renaming the crate
# to `wreq`. Pin via git to the v3.0.6 tag (last release that still publishes
# under the `rquest` name). The 3.x line moved browser emulation out of rquest
# itself into a sibling `rquest-util` crate, so we pull that in too.
rquest = { git = "https://github.com/0x676e67/wreq.git", tag = "v3.0.6", features = ["json", "gzip", "brotli", "deflate", "zstd"] }
rquest-util = { version = "2.2.1", features = ["emulation"] }

# Optional Matrix integration (requires sqlite3)
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite"], optional = true }

# Lightweight Matrix integration (just HTTP, no E2EE/sqlite)
urlencoding = { version = "2.1", optional = true }

# Optional Telegram integration
teloxide = { version = "0.13", features = ["macros"], optional = true }
# Optional Email integration (SMTP via lettre)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "hostname"], optional = true }

fast_html2md = "0.0.61"
url = "2.4"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
tiktoken-rs = "0.7"
pulldown-cmark = "0.13.1"
ammonia = "4"
hmac = "0.12.1"
hex = "0.4.3"

# PTY-embed: spawn `wg nex` (or any command) as a child of the
# ratatui TUI with a pseudo-terminal, render its output as a
# terminal-cell grid, forward key events to its stdin.
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3"
insta = { version = "1", features = ["yaml"] }
workgraph = { path = ".", features = ["test-support"] }

# Force rquest-util's transitive rquest dep through the same git source we use
# directly. Without this, cargo tries to resolve rquest-util's `rquest =
# ">=3.0.5"` requirement against crates.io, where every matching version has
# been yanked by upstream.
[patch.crates-io]
rquest = { git = "https://github.com/0x676e67/wreq.git", tag = "v3.0.6" }
