[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wg-terminal-bench"
version = "0.1.0"
description = "Terminal Bench Condition A harness for Workgraph (bare agent control group)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wg-tb-condition-a = "wg.adapter:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wg*"]
